# crewai-oceanbase-test

./: README.md  pyproject.toml
src/latest_ai_development/: main.py  qwen.py
src/latest_ai_development/config/: agents.yaml  tasks.yaml
src/latest_ai_development/oceanbase_rag/: __init__.py  crew.py  data_loader.py  embeddings.py
